fix(register): correct retrieval of the first command component in command registration